Fix tab overflow from v49
So surprinsgly the v0.8.0 tag run with v49 reproduces, this is a change caused by the way chrome49 renders flexboxes compared to v47

Auditors: @aekeus

--- a/less/tabs.less
+++ b/less/tabs.less
@@ -174,6 +174,7 @@
   padding: 0 2px 0 0;
   position: relative;
   vertical-align: top;
+  overflow: hidden;
   // There's a special case that tabs should span the full width
   // if there are a full set of them.
   &:not(.partOfFullPageSet) {
